Bug 152310 - FILEOPEN DOCX shape with font color in paragraph style has white text
Summary: FILEOPEN DOCX shape with font color in paragraph style has white text
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-11-30 10:13 UTC by Regina Henschel
Modified: 2022-12-20 08:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
File to reproduce the wrong color (18.21 KB, application/zip)
2022-11-30 10:13 UTC, Regina Henschel
Details
Screenshot comparing Word with Writer (90.92 KB, image/png)
2022-11-30 10:18 UTC, Regina Henschel
Details
Screenshot editing paragraph style (69.65 KB, image/png)
2022-11-30 16:51 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-11-30 10:13:33 UTC
Created attachment 183908 [details]
File to reproduce the wrong color

Open attached file in Word and in Writer. The text in the shape is white in Writer instead of showing the color of the assigned paragraph style.
The paragraph styles are assigned, but their color is overwritten with direct formatting.

Tested with Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 17dfc9a9da009cc23d2222e3fb4e2cef9c97d581
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded
Comment 1 Regina Henschel 2022-11-30 10:18:27 UTC
Created attachment 183909 [details]
Screenshot comparing Word with Writer
Comment 2 Regina Henschel 2022-11-30 11:11:51 UTC
It was OK in Version: 7.3.2.2 (x64) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL

The regression might be introduced by https://git.libreoffice.org/core/commit/49a40e3ed200e7c6d728f36d0b4be22dd85c51be, the last fix in bug 135923. But I have not tested it.
Comment 3 m_a_riosv 2022-11-30 16:51:39 UTC
Created attachment 183918 [details]
Screenshot editing paragraph style

Paragraph style of the text, has the right color. So something doesn't allow to show properly the text color.
Comment 4 raal 2022-11-30 20:29:04 UTC
This seems to have begun at the below commit.
Adding Cc: to Tünde Tóth ; Could you possibly take a look at this one?
Thanks
 1820eec7e331056cde79210dcc1c6c0cf77cccd1 is the first bad commit
commit 1820eec7e331056cde79210dcc1c6c0cf77cccd1
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Mar 29 13:13:48 2022 +0200

    source 49a40e3ed200e7c6d728f36d0b4be22dd85c51be
Comment 5 Commit Notification 2022-12-15 08:21:47 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fd831c28bfc29d9d5fe2b3074324d4cbc4a70689

tdf#152310 DOCX shape import: fix lost text color regression

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2022-12-15 08:24:33 UTC
@Regina: many thanks for the bug report!
Comment 7 László Németh 2022-12-15 08:26:44 UTC
@Miguel, Raal: many thanks for handling the issue!

@Tünde: many thanks for the quick fix (it was fixed on 1 of December)!
Comment 8 Commit Notification 2022-12-16 08:01:10 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/d3459346a6f4cf7650a03685bcc89c83716d98b1

tdf#152310 DOCX shape import: fix lost text color regression

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 NISZ LibreOffice Team 2022-12-20 08:23:29 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ad387d5b984c6666906505d25685065f710ed55d
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded