tdf#152310 DOCX shape import: fix lost text color regression

Don't apply COL_AUTO as color of the run.

Regression from commit 49a40e3ed200e7c6d728f36d0b4be22dd85c51be
"tdf#135923 DOCX shape import: set text color".

Change-Id: I9c2088b4c531f09c80715bffdae225ac0987be79
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143533
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit fd831c28bfc29d9d5fe2b3074324d4cbc4a70689)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144179
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>